# mada_reader

./: .gitignore  README.md  docker-compose.yml  mix.exs  setup.sh
config/: config.exs
container/: Dockerfile
lib/: mada_reader.ex
lib/mada_reader/: binary_parser.ex  cli.ex  mada_read.ex  mada_structure.ex  progress_bar.ex  root_wrapper.ex
rootmacro/: CMakeLists.txt  make_tree.C  make_tree.cxx
rootmacro/make_tree/: CMakeLists.txt  make_tree.cxx
rootmacro/one_event_viewer/: CMakeLists.txt  one_event_viewer.cxx
test/: mada_reader_test.exs
